<resources>
    <string name="app_name">Tropical Terrace</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="DetectDisease">Detect Disease</string>
    <string name="onboarding_page_one_description">Detect any kind of disease related to your plant just by clicking a picture of it.</string>
    <string name="InvestInEnvironment">Invest in Environment</string>
    <string name="onboarding_page_two_description">Invest in the environment by growing varieties of plant right from our stores to your house.</string>
    <string name="PersonalizeYourself">Personalize Yourself</string>
    <string name="onboarding_page_three_description">Personalize your own dashboard with all your plant information all at a single place.</string>
    <string name="getStarted">Get Started</string>
    <string name="getStarted_subtitle">Bringing the Tropics Home.</string>
    <string name="getStartedDescription">Discover Tropical Terrace – your go-to for tropical plants. Bring the tropics home with ease. Shop now!</string>
    <string name="Credentials">Please enter credentials</string>
    <string name="EmailHint">Email</string>
    <string name="PasswordHint">Password</string>
    <string name="ReEnterPassword">Re-enter password</string>
    <string name="ForgetPassword">Forget password?</string>
    <string name="Signin">Sign in</string>
    <string name="SigninWith">Or sign in with</string>
    <string name="SigninWithGoogle">Sign in with Google</string>
    <string name="DontHaveAnAcc">Don\'t have an account?</string>
    <string name="Signup">Sign up</string>
    <string name="SkipForNow">Skip for now</string>
    <string name="Continue">Continue</string>
    <string name="SignupWithGoogle">Sign up with Google</string>
    <string name="or">Or</string>
    <string name="navbar_home">Home</string>
    <string name="navbar_search">Search</string>
    <string name="navbar_scan">Scan</string>
    <string name="navbar_cart">Cart</string>
    <string name="navbar_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>