<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_light"
        android:title="@string/navbar_home"/>
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search_light"
        android:title="@string/navbar_search"/>
    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/scan_light"
        android:title="@string/navbar_scan"/>
    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/cart_light"
        android:title="@string/navbar_cart"/>
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_light"
        android:title="@string/navbar_profile"/>

</menu>